--- a/dashboard/src/app/workspaces/workspace-details/workspace-tools/workspace-details-tools.html
+++ b/dashboard/src/app/workspaces/workspace-details/workspace-tools/workspace-details-tools.html
@@ -1,3 +1,7 @@
 <div class="workspace-tools-tab-content">
-  <div che-compile="workspaceDetailsToolsController.page"></div>
+  <workspace-tools-ide ng-if="workspaceDetailsToolsController.isIDE(workspaceDetailsToolsController.selectedMachine)"
+    machine="workspaceDetailsToolsController.selectedMachine"
+    on-change="workspaceDetailsToolsController.onChange()"
+    environment-manager="workspaceDetailsToolsController.environmentManager">
+  </workspace-tools-ide>
 </div>
